fix: scrollbar 안 보이도록 수정

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -5,3 +5,11 @@ body {
     font-family: 'Pretendard';
 }
 
+@layer utilities {
+  .scrollbar-hide {
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    scrollbar-width: none;
+  }
+}
